[package]
name = "jobq"
version = "0.1.0"
authors = ["cetra3 <cetra3@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-postgres = { version = "0.5.3", features = ["with-chrono-0_4", "with-uuid-0_8", "with-serde_json-1"]}
futures = "0.3.4"
tokio = { version = "0.2.13", features = ["full"] }
anyhow = "1.0.27"
structopt = "0.3.12"
pretty_env_logger = "0.2"
log = "0.4.8"
serde = "1.0.105"
serde_json = "1.0.48"
serde_cbor = "0.11.1"
serde_derive = "1.0.105"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
chrono = "0.4.11"
tmq = { path = "/home/cetra/git/tmq" }
postgres-types = { version = "0.1", features = ["derive"] }